Edit member page setup

--- a/public/view/m-transactions/view-transaction.ejs
+++ b/public/view/m-transactions/view-transaction.ejs
@@ -47,7 +47,7 @@
                         <div class="card-header d-md-flex d-block">
                             <div class="h5 mb-0 d-sm-flex d-bllock align-items-center">
                                 <div class="ms-sm-2 ms-0 mt-sm-0 mt-2">
-                                    <div class="h6 fw-medium mb-0">Bill INVOICE : <span class="text-primary" style="color: #d01f2f !important;">#1855</span></div>
+                                    <div class="h6 fw-medium mb-0">Bill INVOICE : <span class="text-primary" style="color: #d01f2f !important;">BNEW-01</span></div>
                                 </div>
                             </div>
                             <div class="ms-auto mt-md-0 mt-2">
@@ -74,6 +74,9 @@
                                             </p>
                                             <p class="mb-1 text-muted">
                                                 +91 9899789340
+                                            </p>
+                                            <p class="mb-1 text-muted">
+                                               <b>07EVVPS9453K4Z8</b> 
                                             </p>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 ms-auto mt-sm-0 mt-3">
