--- a/public/view/partials/footer.ejs
+++ b/public/view/partials/footer.ejs
@@ -105,6 +105,14 @@
     <!-- APP JS-->
     <link rel="modulepreload" href="../../assets/app-C4M4tSMb.js" />
     <script type="module" src=" ../../assets/app-C4M4tSMb.js"></script>
+
+    <!-- Include jQuery (required for Toastr) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Include Toastr JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+
     <!-- END SCRIPTS -->
   </body>
 </html>
