--- a/public/view/m-chapter/add-chapter.ejs
+++ b/public/view/m-chapter/add-chapter.ejs
@@ -135,7 +135,7 @@
                                   class="form-control"
                                   id="chapter_name"
                                   name="chapter_name"
-                                  required
+                                  
                                   placeholder="New chapter name.."
                               />
                               <label for="chapter_name" class="form-label mt-1 fs-12 fw-normal text-muted mb-0">
@@ -161,7 +161,7 @@
                               <label for="chapter_meeting_day" class="form-label">Chapter Meeting Day</label>
                               <select class="form-control" id="chapter_meeting_day"
                               name="chapter_meeting_day"
-                              required>
+                              >
                                 <option value="">Select</option>
                               </select>
                             </div>
@@ -174,7 +174,7 @@
                                 data-trigger=""
                                 id="chapter_type"
                                 name="chapter_type"
-                                required
+                                
                               >
                                 <option value="">Select</option>
                               </select>
@@ -189,7 +189,7 @@
                                 class="form-control"
                                 id="contact_person"
                           name="contact_person"
-                          required
+                          
                                 placeholder="Name of the contact person..."
                               />
                             </div>
@@ -213,7 +213,7 @@
                                   class="form-control"
                                   id="contact_number"
                           name="contact_number"
-                          required
+                          
                                   placeholder="Enter phone number"
                                 />
                               </div>
@@ -231,7 +231,7 @@
                                 class="form-control"
                                 id="email_id"
                           name="email_id"
-                          required
+                          
                                 placeholder="admin@bni.com"
                               />
                             </div>
@@ -438,7 +438,7 @@
                                   class="form-control"
                                   id="eoi_link"
                                   name="eoi_link"
-                                  required
+                                  
                                   placeholder="https://-.."
                                   readonly
                               />
@@ -448,7 +448,7 @@
   <label for="member_app_link" class="form-label">Member Application Link</label>
   <input type="text" class="form-control" id="member_app_link"
   name="member_app_link"
-  required placeholder="https://-.." readonly />
+   placeholder="https://-.." readonly />
 </div>
 
 
@@ -461,7 +461,7 @@
     class="form-control"
     id="chapter_mission"
                           name="chapter_mission"
-                          required
+                          
     placeholder="Enter the chapter's mission"
     rows="3"
   ></textarea>
@@ -475,7 +475,7 @@
     class="form-control"
     id="chapter_vision"
                           name="chapter_vision"
-                          required
+                          
     placeholder="Enter the chapter's vision"
     rows="3"
   ></textarea>
@@ -490,7 +490,7 @@
     class="form-control"
     id="chapter_kitty_fees"
     name="chapter_kitty_fees"
-    required
+    
     placeholder="17,700/-.."
   />
   <div class="form-check mt-2">
@@ -518,7 +518,7 @@
     class="form-control"
     id="chapter_visitor_fees"
     name="chapter_visitor_fees"
-    required
+    
     placeholder="1,200/-.."
   />
   <div class="form-check mt-2">
@@ -547,7 +547,7 @@
     data-trigger=""
     id="chapter_status"
     name="chapter_status"
-    required
+   
   >
     <option value="">Select</option>
   </select>
@@ -562,7 +562,7 @@
     class="form-control"
     id="chapter_logo"
     name="chapter_logo"
-    required
+    
   />
 </div>
                             
@@ -602,7 +602,7 @@
                                 name="product-brand-add"
                                 id="country"
                           name="country"
-                          required
+                          
                               >
                                 <option value="">Select Country</option>
                               </select>
@@ -617,7 +617,7 @@
                                 class="form-control"
                                 id="state"
                           name="state"
-                          required
+                          
                                 placeholder="Enter state or province"
                               />
                             </div>
@@ -629,7 +629,7 @@
                                 class="form-control"
                                 id="city"
                           name="city"
-                          required
+                          
                                 placeholder="Enter city"
                               />
                             </div>
@@ -643,7 +643,7 @@
                                 class="form-control"
                                 id="meeting_hotel_name"
                                 name="meeting_hotel_name"
-                                required
+                                
                                 placeholder="Vivanta by Taj.."
                               />
                             </div>
@@ -657,7 +657,7 @@
                                 class="form-control"
                                 id="street_address_line"
                           name="street_address_line"
-                          required
+                          
                                 placeholder="Enter street address"
                               />
                             </div>
@@ -671,7 +671,7 @@
                                 class="form-control"
                                 id="postal_code"
                           name="postal_code"
-                          required
+                          
                                 placeholder="Enter postal code"
                               />
                             </div>
@@ -716,7 +716,7 @@
                                 class="form-control"
                                 id="chapter_facebook"
                           name="chapter_facebook"
-                          required
+                          
                                 placeholder="www.facebook.com"
                               />
                             </div>
@@ -731,7 +731,7 @@
                                 class="form-control"
                                 id="chapter_instagram"
                           name="chapter_instagram"
-                          required
+                          
                                 placeholder="www.instagram.com"
                               />
                             </div>
@@ -746,7 +746,7 @@
                                 class="form-control"
                                 id="chapter_linkedin"
                           name="chapter_linkedin"
-                          required
+                          
                                 placeholder="www.linkedin.com"
                               />
                             </div>
@@ -761,7 +761,7 @@
                                 class="form-control"
                                 id="chapter_youtube"
                           name="chapter_youtube"
-                          required
+                          
                                 placeholder="www.youtube.com"
                               />
                             </div>
@@ -776,7 +776,7 @@
                                 class="form-control"
                                 id="chapter_website"
                           name="chapter_website"
-                          required
+                          
                                 placeholder="www.yourwebsite.com"
                               />
                             </div>
@@ -813,7 +813,7 @@
                                 class="form-control"
                                 id="one_time_registration_fee"
                                 name="one_time_registration_fee"
-                                required
+                                
                                 placeholder="5,000/-"
                                 readonly
                                 style="background-color: rgb(240, 240, 240);"
@@ -826,7 +826,7 @@
                                 class="form-control"
                                 id="chapter_late_fees"
                                 name="chapter_late_fees"
-                                required
+                                
                                 placeholder="Enter late fees"
                                 readonly
                                 style="background-color: rgb(240, 240, 240);"
@@ -839,7 +839,7 @@
                                 class="form-control"
                                 id="chapter_membership_fee"
                                 name="chapter_membership_fee"
-                                required
+                                
                                 placeholder="59,900/-"
                                 readonly
                                 style="background-color: rgb(240, 240, 240);"
@@ -852,7 +852,7 @@
                                 class="form-control"
                                 id="chapter_membership_fee_two_year"
                                 name="chapter_membership_fee_two_year"
-                                required
+                                
                                 placeholder="69,000/-"
                                 readonly
                                 style="background-color: rgb(240, 240, 240);"
@@ -865,7 +865,7 @@
                                 class="form-control"
                                 id="chapter_membership_fee_five_year"
                                 name="chapter_membership_fee_five_year"
-                                required
+                                
                                 placeholder="1,03,500/-"
                                 readonly
                                 style="background-color: rgb(240, 240, 240);"
@@ -883,13 +883,13 @@
                     <label for="date_of_publishing" class="form-label mb-0 me-2"><b>Date of Publishing</b>:</label>
                     <input type="date" class="form-control d-inline-block w-auto" id="date_of_publishing"
                     name="date_of_publishing"
-                    required />
+                     />
                   </div>
                   <div class="me-3">
                     <label for="chapter_launched_by" class="form-label mb-0 me-2"><b>Chapter Launched by</b>:</label>
                     <input type="text" class="form-control d-inline-block w-auto" id="chapter_launched_by"
                     name="chapter_launched_by"
-                    required
+                    
                            placeholder="Chapter launched by.." />
                   </div>
                   
@@ -1214,7 +1214,7 @@
     });
   
     try {
-      const response = await fetch('http://localhost:5000/api/chapters', {
+      const response = await fetch('https://bni-data-backend.onrender.com/api/chapters', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
@@ -1224,12 +1224,15 @@
   
       const result = await response.json();
       if (response.ok) {
+        toastr.success('Chapter added successfully!');
         document.getElementById("formMessage").innerText = "Chapter added successfully!";
       } else {
         document.getElementById("formMessage").innerText = `Error: ${result.message}`;
+        toastr.error( result.message);
       }
     } catch (error) {
       console.error("Error submitting the form:", error);
+      toastr.error( error.message);
       document.getElementById("formMessage").innerText = "An error occurred. Please try again.";
     }
   });
