--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -100,6 +100,9 @@
         min-height: 0vh !important;
       }
     </style>
+<!-- toaster js -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet"/>
+
   </head>
 
   <body class="">
