--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -369,6 +369,8 @@
       </div>
       <!-- End::content  -->
 
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
       <script>
         // Function to get URL parameter
 function getUrlParameter(name) {
