--- a/public/view/m-transactions/manage-transactions.ejs
+++ b/public/view/m-transactions/manage-transactions.ejs
@@ -765,6 +765,10 @@
   </div>
 </div>
 <!-- End::content  -->
+<!-- SweetAlert2 CDN -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 
 <script>
   // Function to get URL parameter
