--- a/public/view/m-region/manage-region.ejs
+++ b/public/view/m-region/manage-region.ejs
@@ -1,7 +1,12 @@
       <!-- header -->
       <%- include('../partials/header') %> 
       <!-- end header -->
+  <!-- Loader -->
+  <div id="loader" style="display: none; align-items: center; justify-content: center;opacity: 99999; background-color: red;">
+    <img src="../../assets/images/media/loader-5.svg" alt="Loading...">
+</div>
 
+<!-- Loader -->
       <!-- sidebar -->
 
       <%- include('../partials/sidebar') %>
