--- a/public/view/m-transaction/manage-transactions.ejs
+++ b/public/view/m-transaction/manage-transactions.ejs
@@ -94,6 +94,13 @@
     </style>
   </head>
 
+  <!-- Loader -->
+  <div id="loader" style="display: none; align-items: center; justify-content: center;opacity: 99999; background-color: red;">
+    <img src="../../assets/images/media/loader-5.svg" alt="Loading...">
+</div>
+
+<!-- Loader -->
+
   <body class="">
     <!-- Switcher -->
     <div
@@ -2954,3 +2961,14 @@
     <!-- END SCRIPTS -->
   </body>
 </html>
+
+
++
+
+
+
+
+
+
+
+
