--- a/public/view/m-transactions/manage-transactions.ejs
+++ b/public/view/m-transactions/manage-transactions.ejs
@@ -5,7 +5,12 @@
 <!-- sidebar -->
 
 <%- include('../partials/sidebar') %>
+ <!-- Loader -->
+ <div id="loader" style="display: none; align-items: center; justify-content: center;opacity: 99999; background-color: red;">
+  <img src="../../assets/images/media/loader-5.svg" alt="Loading...">
+</div>
 
+<!-- Loader -->
 <!-- Start::app-content -->
 <div class="main-content app-content">
   <div class="container-fluid">
