--- a/public/view/m-universalLinks/manage-universal-links.ejs
+++ b/public/view/m-universalLinks/manage-universal-links.ejs
@@ -8,6 +8,12 @@
 
       <!-- end sidebar -->
 
+        <!-- Loader -->
+  <div id="loader" style="display: none; align-items: center; justify-content: center;opacity: 99999; background-color: red;">
+    <img src="../../assets/images/media/loader-5.svg" alt="Loading...">
+</div>
+
+<!-- Loader -->
       <!-- Start::app-content -->
       <div class="main-content app-content">
         <div class="container-fluid">
@@ -86,6 +92,7 @@
                     </tr>
                   </thead>
                   <tbody id="chaptersTableBody">
+                 
                   </tbody>
                 </table>
               </div>
