--- a/public/view/partials/header.ejs
+++ b/public/view/partials/header.ejs
@@ -40,7 +40,7 @@
     <link href="../../assets/icon-fonts/icons.css" rel="stylesheet" />
 
     <!-- Choices JS -->
-    <script src="../../assets/libs/choices.js/public/  scripts/choices.min.js"></script>
+    <script src="../../assets/libs/choices.js/public/assets/scripts/choices.min.js"></script>
 
     <!-- Bootstrap Css -->
     <link
