--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -674,7 +674,7 @@
               <li class="slide">
                 <a href="#" class="side-menu__item">
                   <img
-                    src=" assets/images/faces/15.jpg"
+                    src="../../assets/images/faces/15.jpg"
                     alt="img"
                     class="avatar avatar-sm"
                   />
