--- a/public/view/m-member/edit-members.ejs
+++ b/public/view/m-member/edit-members.ejs
@@ -39,7 +39,7 @@
             <div>
               <h1 class="page-title fw-medium fs-18 mb-0">
                 <span style="font-weight: 700; font-family: Poppins"
-                  >Add New Member</span
+                  >Edit Member</span
                 > <br>
 				
               </h1>
@@ -452,13 +452,13 @@
                             </div>
 
                             <div class="col-xl-6">
-                              <label for="address_pincode" class="form-label"
+                              <label for="member_company_pincode" class="form-label"
                                 >Postal Code *</label
                               >
                               <input
                                 type="text"
                                 class="form-control"
-                                id="address_pincode"
+                                id="address_pincode2"
                                   name="address_pincode"
                                   required
                                 placeholder="Enter Postal Code.."
@@ -733,7 +733,7 @@
                   </div>
                   
                   <button class="btn btn-success me-2 mb-2 mb-sm-0">
-                    Add Member
+                    Edit Member
                   </button>
                 </div>
                 
@@ -972,5 +972,6 @@
   });
   </script>
   <script src="../../assets/js/country.js"></script>
+  <script src="../../assets/js/editMember.js"></script>
 
 <%- include('../partials/footer') %> 
