--- a/public/view/m-member/manage-members.ejs
+++ b/public/view/m-member/manage-members.ejs
@@ -345,6 +345,7 @@
                       <th scope="col" style="border: 1px solid grey;">Member Chapter</th>
                       <th scope="col" style="border: 1px solid grey;">Induction Date</th>
                       <th scope="col" style="border: 1px solid grey;">Status</th>
+                      <th scope="col" style="border: 1px solid grey;">Actions</th>
                     </tr>
                   </thead>
                   <tbody>
