--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -1,7 +1,12 @@
       <!-- header -->
       <%- include('../partials/header') %> 
       <!-- end header -->
-
+      <div id="loader" style="display:none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); justify-content: center; align-items: center;">
+        <div class="spinner-border text-light" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
+    
       <!-- sidebar -->
 
       <%- include('../partials/sidebar') %>
