updated edit pages

--- a/public/view/m-chapter/edit-chapter.ejs
+++ b/public/view/m-chapter/edit-chapter.ejs
@@ -8,6 +8,13 @@
 
 <!-- end sidebar -->
 
+  <!-- Loader -->
+  <div id="loader" style="display: none; align-items: center; justify-content: center;opacity: 99999; background-color: red;">
+    <img src="../../assets/images/media/loader-5.svg" alt="Loading...">
+</div>
+
+<!-- Loader -->
+
 <style>
   /* Ensuring that the modal body has padding */
   .modal-body {
@@ -61,7 +68,7 @@
       <div>
         <h1 class="page-title fw-medium fs-18 mb-0">
           <span style="font-weight: 700; font-family: Poppins"
-            >Add New Chapter</span
+            >Edit Chapter</span
           >
         </h1>
         <!-- <p>Manage kitty payments with just one click</p> -->
@@ -948,7 +955,7 @@
               </div>
 
               <button class="btn btn-success me-2 mb-2 mb-sm-0">
-                Add Chapter
+                Edit Chapter
               </button>
             </div>
           </div>
