--- a/public/view/m-chapter/manage-chapter.ejs
+++ b/public/view/m-chapter/manage-chapter.ejs
@@ -119,6 +119,7 @@
                       <th scope="col" style="border: 1px solid grey;">Chapter Type</th>
                       <th scope="col" style="border: 1px solid grey;">Chapter Kitty Fees</th>
                       <th scope="col" style="border: 1px solid grey;">Status</th>
+                      <th scope="col" style="border: 1px solid grey;">Actions</th>
                     </tr>
                   </thead>
                   <tbody id="chaptersTableBody">
