Condition for view e-invoice

--- a/public/view/m-region/manage-region.ejs
+++ b/public/view/m-region/manage-region.ejs
@@ -64,14 +64,71 @@
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group">
 
-                  <button
-                    class="btn btn-outline-light border dropdown-toggle"
-                    type="button"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="false"
-                  >
-                    <i class="ti ti-sort-descending-2 me-1"></i> Filter
-                  </button>
+                  <div class="dropdown">
+                    <a
+                      href="javascript:void(0);"
+                      class="btn btn-sm btn-light text-muted dropdown-toggle"
+                      data-bs-toggle="dropdown"
+                      aria-expanded="true"
+                    >
+                      <i class="ti ti-sort-descending-2 me-1"></i>
+                      Filter</a
+                    >
+                    <ul
+                      class="dropdown-menu"
+                      role="menu"
+                      data-popper-placement="bottom-end"
+                    >
+                      <li>
+                        <a class="dropdown-item" href="javascript:void(0);"
+                          >This Week</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="javascript:void(0);"
+                          >Last Week</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="javascript:void(0);"
+                          >This Month</a
+                        >
+                      </li>
+                    </ul>
+                    <a
+            href="javascript:void(0);"
+            class="btn btn-sm btn-light text-muted dropdown-toggle"
+            data-bs-toggle="dropdown"
+            aria-expanded="true"
+          >
+            <i class="ti ti-sort-descending-2 me-1"></i>
+            Filter</a
+          >
+          <ul
+            class="dropdown-menu"
+            role="menu"
+            data-popper-placement="bottom-end"
+          >
+            <li>
+              <a class="dropdown-item" href="javascript:void(0);"
+                >This Week</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="javascript:void(0);"
+                >Last Week</a
+              >
+            </li>
+            <li>
+              <a class="dropdown-item" href="javascript:void(0);"
+                >This Month</a
+              >
+            </li>
+          </ul>
+                  </div>
+        <div class="dropdown">
+          
+          </div>
                   <button
                     class="btn btn-outline-light border"
                     type="button"
