--- a/public/view/partials/footer.ejs
+++ b/public/view/partials/footer.ejs
@@ -111,6 +111,8 @@
 
 <!-- Include Toastr JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/build/qrcode.min.js"></script>
+
 
 
     <!-- END SCRIPTS -->
