--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -274,46 +274,121 @@
                 >
                   <div class="card-title">All Transactions</div>
                   <div class="d-flex">
-                    <button
-                      class="btn btn-outline-light border dropdown-toggle"
-                      type="button"
+                    <div class="dropdown">
+                      <a
+                        href="javascript:void(0);"
+                        class="btn btn-sm btn-light text-muted dropdown-toggle"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true"
+                      >
+                      <i class="ti ti-sort-descending-2 me-1"></i>
+                        Region</a
+                      >
+                      <ul
+                        class="dropdown-menu"
+                        role="menu"
+                        data-popper-placement="bottom-end"
+                      >
+                        <li>
+                          <a class="dropdown-item" href="javascript:void(0);"
+                            >This Week</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="javascript:void(0);"
+                            >Last Week</a
+                          >
+                        </li>
+                        <li>
+                          <a class="dropdown-item" href="javascript:void(0);"
+                            >This Month</a
+                          >
+                        </li>
+                      </ul>
+
+                      <a
+                      href="javascript:void(0);"
+                      class="btn btn-sm btn-light text-muted dropdown-toggle"
                       data-bs-toggle="dropdown"
-                      aria-expanded="false"
+                      aria-expanded="true"
                     >
-                      <i class="ti ti-sort-descending-2 me-1"></i> Region
-                    </button>
-                    <button
-                      class="btn btn-outline-light border dropdown-toggle"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
+                    <i class="ti ti-sort-descending-2 me-1"></i>
+                      Chapter</a
                     >
-                      <i class="ti ti-sort-descending-2 me-1"></i> Chapter
-                    </button>
-                    <button
-                      class="btn btn-outline-light border dropdown-toggle"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
+                    <ul
+                      class="dropdown-menu"
+                      role="menu"
+                      data-popper-placement="bottom-end"
                     >
-                      <i class="ti ti-sort-descending-2 me-1"></i> July
-                    </button>
-                    <button
-                      class="btn btn-outline-light border dropdown-toggle"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i> Monthly
-                    </button>
-                    <button
-                      class="btn btn-outline-light border dropdown-toggle"
-                      type="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i> Filter
-                    </button>
+                      <li>
+                        <a class="dropdown-item" href="javascript:void(0);"
+                          >This Week</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="javascript:void(0);"
+                          >Last Week</a
+                        >
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="javascript:void(0);"
+                          >This Month</a
+                        >
+                      </li>
+                    </ul>
+
+                    <a
+                    href="javascript:void(0);"
+                    class="btn btn-sm btn-light text-muted dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="true"
+                  >
+                  <i class="ti ti-sort-descending-2 me-1"></i>
+                    Month</a
+                  >
+                  <ul
+                    class="dropdown-menu"
+                    role="menu"
+                    data-popper-placement="bottom-end"
+                  >
+                    <li>
+                      <a class="dropdown-item" href="javascript:void(0);"
+                        >This Week</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="javascript:void(0);"
+                        >Last Week</a
+                      >
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="javascript:void(0);"
+                        >This Month</a
+                      >
+                    </li>
+                  </ul>
+
+                  <a
+  href="javascript:void(0);"
+  class="btn btn-sm btn-light text-muted dropdown-toggle"
+  data-bs-toggle="dropdown"
+  aria-expanded="false"
+>
+  <i class="ti ti-sort-descending-2 me-1"></i>
+  Filter
+</a>
+
+<div class="dropdown-menu p-3">
+  <label for="filterDate">Select Date:</label>
+  <input
+    type="text"
+    id="filterDate"
+    class="form-control"
+    placeholder="YYYY-MM-DD"
+  />
+</div>
+
+                    </div>
                     <a
                       href="/t/new-invoice"
                       class="btn btn-sm btn-primary btn-wave waves-light"
