Changed whole look of the view e-invoice template in dashboard

--- a/public/view/m-einvoice/view-einvoice.ejs
+++ b/public/view/m-einvoice/view-einvoice.ejs
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="images/favicon.png" rel="icon">
-<title>General Invoice - Koice</title>
+<link href="https://www.bni.com/wp-content/uploads/2020/05/Favicon_final.jpg?x31798" rel="icon">
+<title>Thank You for the payment | E-Invoice - BNI Management Software</title>
 <meta name="author" content="harnishdesign.net">
 
 <!-- Web Fonts
@@ -24,12 +24,23 @@
   <!-- Header -->
   <header>
 	  <div class="row align-items-center gy-3">
-		<div class="col-sm-7 text-center text-sm-start">
-		  <img id="logo" src="https://bni-xq0f.onrender.com/assets/images/bni-new-logo.jpg" title="Koice" alt="Koice" width="250px">
+		<div class="col-sm-4 text-center text-sm-start">
+			
+		  </div>
+		<div class="col-sm-4 text-center text-sm-start">
+		  <h2 style="font-family: Arial, Helvetica, sans-serif; font-weight: 500;">Tax Invoice</h2>
 		</div>
-		<div class="col-sm-5 text-center text-sm-end">
+		<div class="col-sm-4 text-center text-sm-end">
             <img id="logo" src="../../assets/images/demo-qr-code.png" title="Koice" alt="Koice" width="150px">
 		</div>
+	  </div>
+	  <div class="row align-items-center gy-3">
+		<div class="col-sm-4 text-center text-sm-start">
+			<span><span><b>IRN :</b></span> a8165431fa267d6da3ca0fc55
+			ea82a9e831d91dabb8533c56d6421affc5b564f</span> <br>
+			<span><span><b>Ack No. :</b></span> 172416019112450</span> <br>
+			<span><span><b>Ack Date :</b> 11-Nov-2024</span></span>
+		  </div>
 	  </div>
 	  <hr>
   </header>
@@ -37,13 +48,13 @@
   <!-- Main Content -->
   <main>
 	  <div class="row">
-		<div class="col-sm-6"><strong>Date:</strong> 14/11/24</div>
+		<div class="col-sm-6"><strong>Dated:</strong> 14/11/24</div>
 		<div class="col-sm-6 text-sm-end"> <strong>Invoice No:</strong> 16835</div>
 		  
 	  </div>
 	  <hr>
 	  <div class="row">
-		<div class="col-sm-6 text-sm-end order-sm-1"> <strong>Invoice To:</strong>
+		<div class="col-sm-4 text-sm-end order-sm-1"> <strong>Consignee (Ship to):</strong>
 		  <address>
 		  Raja Shukla<br>
 		  National Marketing Projects INC<br>
@@ -52,29 +63,45 @@ Patel Garden Sec-15, Dwarka <br> (Near,
 Dwarka Hospital) Delhi-110078
 		  </address>
 		</div>
-		<div class="col-sm-6 order-sm-0"> <strong>Invoiced by:</strong>
+		<div class="col-sm-4 order-sm-0"> <strong>ADI CORPORATE TRAINING</strong>
 		  <address>
-            ADI CORPORATE TRAINING<br>
-            Dda Sfs Flat, Flat No 12, Pocket 1, Sector 19, Dwarka New Delhi, Delhi, 110075 India <br>
-           <p> <span><b>IRN:</b></span><i>a8165431fa267d6da3ca0fc55 <br> ea82a9e831d91dabb8533c56d6421affc5b564f</i> </p>
+            Pocket 1, Flat No. 09, Sector 19
+Dwarka, <br> New Delhi Delhi, 110075. <br>
+<span><b>GSTIN/UIN:</b></span> 07AHIPK0486D1ZH <br>
+<span><b>State Name :</b></span> Delhi, Code : 07
 		  </address>
 		</div>
+		<div class="col-sm-4 text-sm-end order-sm-1"> <strong>Buyer (Bill to):</strong>
+			<address>
+			Raja Shukla<br>
+			National Marketing Projects INC<br>
+			B-27/A, Third Floor, Dwarka Mor, <br>
+  Patel Garden Sec-15, Dwarka <br> (Near,
+  Dwarka Hospital) Delhi-110078
+			</address>
+		  </div>
 	  </div>
 		<div class="table-responsive">
-		<table class="table border mb-0">
-			<thead>
+		<table class="table border mb-0" style="border: 1px solid black;">
+			<thead style="border: 1px solid grey;">
 			  <tr class="bg-light">
-				<td class="col-3"><strong>Service</strong></td>
-                <td class="col-2 text-center"><strong>HSN</strong></td>
+				<td class="col-2 text-center"><strong>SI No.</strong></td>
+				<td class="col-3"><strong>Particulars</strong></td>
+                <td class="col-2 text-center"><strong>HSN/SAC</strong></td>
+				<td class="col-2 text-center"><strong>Quantity</strong></td>
 				<td class="col-2 text-center"><strong>Rate</strong></td>
+				<td class="col-2 text-center"><strong>Per</strong></td>
 				<td class="col-2 text-end"><strong>Amount</strong></td>
 			  </tr>
 			</thead>
-			<tbody>
+			<tbody style="border: 1px solid grey;">
 				<tr>
+					<td class="col-2 text-center">1</td>
 				  <td class="col-3">New Memeber Payment</td>
                   <td class="col-2 text-center">999511</td>
 				  <td class="col-2 text-center">₹41,308</td>
+				  <td class="col-2 text-end">₹41,308</td>
+				  <td class="col-2 text-end">₹41,308</td>
 				  <td class="col-2 text-end">₹41,308</td>
 				</tr>
 
